@@ -4,17 +4,14 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
-public class PascalsTriangle {
-    public static void main(String[] args) {
-        var x = generate(5);
-        System.out.println("stop");
-    }
+//https://leetcode.com/problems/pascals-triangle/description/
 
+public class PascalsTriangle {
     public static List<List<Integer>> generate(int numRows) {
         List<List<Integer>> triangleRows = new ArrayList<>();
-        if (numRows == 1) return new ArrayList<>(Arrays.asList(Arrays.asList(1)));
+        if (numRows == 1) return new ArrayList<>(List.of(List.of(1)));
 
-        triangleRows.add(Arrays.asList(1));
+        triangleRows.add(List.of(1));
         triangleRows.add(Arrays.asList(1, 1));
         for (int rowIndex = 2; rowIndex < numRows; rowIndex++) {
             List<Integer> rowNumbers = new ArrayList<>(rowIndex);
@@ -29,4 +26,42 @@ public class PascalsTriangle {
         }
         return triangleRows;
     }
+
+    static void testUnitPascalsTriangle(int input, List<List<Integer>> expected) {
+        List<List<Integer>> result = generate(input);
+        System.out.println("input: "+input+" result: "+result.equals(expected));
+        System.out.println("printout:");
+        for (List<Integer>row : result){
+            System.out.println(row);
+        }
+    }
+
+    public static void main(String[] args) {
+        testUnitPascalsTriangle(1, new ArrayList<>(List.of(List.of(1))));
+
+        testUnitPascalsTriangle(2, new ArrayList<>(List.of(
+                List.of(1),
+                List.of(1, 1))));
+        testUnitPascalsTriangle(3, new ArrayList<>(List.of(
+                List.of(1),
+                List.of(1, 1),
+                List.of(1, 2, 1))));
+        testUnitPascalsTriangle(4, new ArrayList<>(List.of(
+                List.of(1),
+                List.of(1, 1),
+                List.of(1, 2, 1),
+                List.of(1, 3, 3, 1)
+        )));
+        testUnitPascalsTriangle(5, new ArrayList<>(List.of(
+                List.of(1),
+                List.of(1, 1),
+                List.of(1, 2, 1),
+                List.of(1, 3, 3, 1),
+                List.of(1, 4, 6, 4, 1)
+        )));
+
+
+    }
+
+
 }
